# mcp-server-couchbase

./: .coveragerc  .gitignore  404.html  CATALOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  README.md  RELEASE.md  build-from-source.html  build.sh  configuration.html  exp-1.md  exp-2.md  exp-3.md  index.html  pyproject.toml  security.html  server.json  sitemap.xml  tools.html  troubleshooting.html
.github/: mcp-publisher.sha512
configuration/: disabling-tools.html  elicitation-for-tools.html  environment-variables.html  read-only-mode.html  streamable-http.html
contributing/: docs.html  server.html
docs/: CATALOG_ENHANCEMENTS.md  architecture.md  implementation.md
get-started/: prerequisites.html  quickstart.html  registries.html
product-notes/: contributing.html  release-notes.html
scripts/: run_matrix_local.sh  setup_test_data.py
src/: catalog_manager.py  mcp_server.py  meta.py
stytch/: .env.example  README.md  app.py  pyproject.toml
tests/: README.md  _test_env.py  conftest.py  test_catalog_enrichment_concurrency.py  test_catalog_hashing.py  test_catalog_store_summary.py  test_catalog_worker_concurrency.py  test_catalog_worker_scope_filter.py  test_confirmation_tools.py  test_disabled_tools.py  test_docs_tools.py  test_index_advisor.py  test_index_tools.py  test_is_explain_statement.py  test_kv_tools.py  test_mcp_integration.py  test_mcp_server_integration.py  test_parse_tool_names.py  test_query_generation_routing.py  test_query_plan_evaluation.py  test_query_tools.py  test_read_only_mode.py  test_relationship_parser_guardrails.py  test_relationship_verifier_sampling_only_tasks.py  test_server_configuration_status_tool.py  test_server_tools.py  test_tool_registration.py  test_update_query_annotation.py  (+2 more)
(+1027 files in other folders)
