[project]
name = "mcp-couchbase"
version = "0.2.0-rc.0"
description = "Couchbase MCP Server - The Developer Data Platform for Critical Applications in Our AI World"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name="Nithish Raghunandanan", email="devadvocates@couchbase.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
]

dependencies = [
    "click>=8.1.8",
    "couchbase>=4.3.5",
    "lark-sqlpp>=0.0.1",
    "mcp[cli]>=1.5.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Couchbase-Ecosystem/mcp-server-couchbase"
Documentation = "https://github.com/Couchbase-Ecosystem/mcp-server-couchbase#readme"
Issues = "https://github.com/Couchbase-Ecosystem/mcp-server-couchbase/issues"

[project.scripts]
mcp-couchbase-server = "mcp_couchbase.server:main"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["E", "F", "I", "T201"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build]
packages = ["src/mcp_couchbase"]