[project]
name = "stytch-login-app"
version = "0.1.0"
description = "Standalone Stytch Connected Apps authorization endpoint (login UI) for the Couchbase MCP Server."
requires-python = ">=3.10,<3.14"

dependencies = [
    "starlette>=0.40",
    "uvicorn>=0.30",
    "stytch>=11.0",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
